// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppImage - default icon, custom executable and custom desktop 1`] = `
"[Desktop Entry]
Name=Test App ßW
Comment=Test Application (test quite “ #378)
Exec=AppRun
Terminal=true
Type=Application
Icon=Foo
X-Foo=bar
Categories=Development;
"
`;

exports[`AppImage - default icon, custom executable and custom desktop 2`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "boo-Test App ßW",
      "safeArtifactName": "TestApp-1.1.0-x86_64.AppImage",
      "updateInfo": Object {},
    },
  ],
}
`;

exports[`AppImage - doNotAsk system integration 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-x86_64.AppImage",
      "updateInfo": Object {},
    },
  ],
}
`;

exports[`AppImage 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-x86_64.AppImage",
      "updateInfo": Object {},
    },
    Object {
      "file": "latest-linux.yml",
      "fileContent": Object {
        "path": "TestApp-1.1.0-x86_64.AppImage",
        "url": "TestApp-1.1.0-x86_64.AppImage",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`AppImage ia32 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "ia32",
      "file": "TestApp-1.1.0-i386.AppImage",
      "updateInfo": Object {},
    },
    Object {
      "file": "latest-linux-ia32.yml",
      "fileContent": Object {
        "path": "TestApp-1.1.0-i386.AppImage",
        "url": "TestApp-1.1.0-i386.AppImage",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`icons from ICNS 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-x86_64.AppImage",
      "updateInfo": Object {},
    },
  ],
}
`;

exports[`no-author-email 1`] = `
"Please specify author 'email' in the application package.json

See https://docs.npmjs.com/files/package.json#people-fields-author-contributors

It is required to set Linux .deb package maintainer. Or you can set maintainer in the custom linux options.
(see https://github.com/electron-userland/electron-builder#distributable-format-configuration).
"
`;
